--- a/css/main.min.styl
+++ b/css/main.min.styl
@@ -133,7 +133,7 @@ section
                     text-align justify
                     &:first-of-type
                         margin-bottom 2.5vh
-            .social-media
+            .thislink
                 a
                     position relative
                     &:after
@@ -178,8 +178,6 @@ section
                 float left
                 padding 0 7% 0 3%
                 padding-top 5%
-                .form
-                    img
                         
     
 @media (max-width: 992px) and (min-width: 769px) //Tablet
